--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,6 +1,7 @@
 {
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
+    "typeRoots": ["./node_modules/@types", "./types"],
     // File Layout
     // "rootDir": "./src",
     // "outDir": "./dist",
