--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.36.0",
     "@types/config": "^3.3.5",
     "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.1",
